Project Attribute_Product_Case_2 {
  database_type: 'MySQL'
  Note: '''
    # Giải pháp thuộc tính sản phẩm
    
    > #### sản phẩm có nhiều nhóm thuộc tính

    

  '''
}

Table product {
  id int [PK, increment]
  name varchar
  group_attribute_id int
}

Table group_attribute {
  id int [PK, increment]
  name varchar
}

Table product_group_attribute {
    id int [PK, increment]
    product_id int
    group_attribute_id int
}

Table attribute {
  id int [PK, increment]
  name varchar
  change_price int 
  group_attribute_id int
}

Ref: product.id < product_group_attribute.product_id
Ref: group_attribute.id < product_group_attribute.group_attribute_id
Ref: group_attribute.id < attribute.group_attribute_id